Update VLM to Microsoft Florence-2 and enhance documentation
- Replace BLIP-2 with Microsoft Florence-2-base for enhanced multimodal capabilities
- Add new Florence-2 methods: OCR, object detection, detailed captioning
- Update all configuration files (settings.py, development.yaml, production.yaml)
- Completely rewrite README.md with current project structure and features
- Add troubleshooting guide and comprehensive usage instructions
- Include performance optimization and security feature documentation
- Fix import handling for optional dependencies in image processing module

Technical improvements:
- Florence-2 provides better image understanding compared to BLIP-2
- Added Korean Expressway Corporation specific road damage detection
- Enhanced error handling for missing dependencies
- Updated system architecture documentation

--- a/config/development.yaml
+++ b/config/development.yaml
@@ -27,7 +27,7 @@ models:
     endpoint: http://localhost:8101/v1
     name: bge-reranker-v2-m3
   vlm:
-    name: Salesforce/blip-2-opt-2.7b
+    name: microsoft/Florence-2-base
     device: cuda
   ocr:
     engine: easyocr
